crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_wrong_empty_metadata_used_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#51 : Data = constrData (trace "tag" in 59) (trace "fields" in (con (list integer) [])) in
let effect#52 : int = trace "between" in 0 in
case@Data data#51 of
  DataConstr pair#53 -> trace "selected" in 9
--- unoptimized UPLC
(program 1.1.0
  [(lam data_51
    [(lam effect_52
      [(lam generated_54
        (force
          [[[[[[(force (builtin chooseData)) generated_54]
            (delay
              (force
                [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))]
            (delay (error))]
            (delay (error))]
            (delay (error))]
            (delay (error))]))
        data_51])
      (force
        [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
    [[(builtin constrData)
      (force [[(force (builtin trace)) (con string "tag")] (delay (con integer 59))])]
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list integer) []))])]])
--- optimized Core
let anf#4 : int = trace "tag" in 59 in
let anf#5 : list int = trace "fields" in (con (list integer) []) in
let data#1 : Data = constrData anf#4 anf#5 in
let effect#2 : int = trace "between" in 0 in
trace "selected" in 9
--- optimized UPLC
(program 1.1.0
  [(lam builtin_9
    [(lam anf_3
      [(lam anf_6
        [(lam data_7
          [(lam effect_8
            (force [[builtin_9 (con string "selected")] (delay (con integer 9))]))
            (force [[builtin_9 (con string "between")] (delay (con integer 0))])])
          [[(builtin constrData) anf_3] anf_6]])
        (force [[builtin_9 (con string "fields")] (delay (con (list integer) []))])])
      (force [[builtin_9 (con string "tag")] (delay (con integer 59))])])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#54 : int = trace "tag" in 59 in
let anf#55 : list int = trace "fields" in (con (list integer) []) in
let data#51 : Data = constrData anf#54 anf#55 in
let effect#52 : int = trace "between" in 0 in
case@Data data#51 of
  DataConstr pair#53 -> trace "selected" in 9
--- isolated folded Core
let anf#54 : int = trace "tag" in 59 in
let anf#55 : list int = trace "fields" in (con (list integer) []) in
let data#51 : Data = constrData anf#54 anf#55 in
let effect#52 : int = trace "between" in 0 in
trace "selected" in 9
--- isolated cleaned Core
let anf#54 : int = trace "tag" in 59 in
let anf#55 : list int = trace "fields" in (con (list integer) []) in
let data#51 : Data = constrData anf#54 anf#55 in
let effect#52 : int = trace "between" in 0 in
trace "selected" in 9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_54
    [(lam anf_55
      [(lam data_51
        [(lam effect_52
          [(lam generated_56
            (force
              [[[[[[(force (builtin chooseData)) generated_56]
                (delay
                  (force
                    [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))]
                (delay (error))]
                (delay (error))]
                (delay (error))]
                (delay (error))]))
            data_51])
          (force
            [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
        [[(builtin constrData) anf_54] anf_55]])
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list integer) []))])])
    (force [[(force (builtin trace)) (con string "tag")] (delay (con integer 59))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_54
    [(lam anf_55
      [(lam data_51
        [(lam effect_52
          (force
            [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))
          (force
            [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
        [[(builtin constrData) anf_54] anf_55]])
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list integer) []))])])
    (force [[(force (builtin trace)) (con string "tag")] (delay (con integer 59))])])
--- result
error: Runtime(TypeMismatch(Data, ProtoList(Integer, [])))
--- logs
["tag", "fields"]
