crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_wrong_tag_used_false.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#31 : Data = constrData (trace "tag" in true) (trace "fields" in (con (list data) [(I 42)])) in
let effect#32 : int = trace "between" in 0 in
case@Data data#31 of
  DataConstr pair#33 -> trace "selected" in 9
--- unoptimized UPLC
(program 1.1.0
  [(lam data_31
    [(lam effect_32
      [(lam generated_34
        (force
          [[[[[[(force (builtin chooseData)) generated_34]
            (delay
              (force
                [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))]
            (delay (error))]
            (delay (error))]
            (delay (error))]
            (delay (error))]))
        data_31])
      (force
        [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
    [[(builtin constrData)
      (force [[(force (builtin trace)) (con string "tag")] (delay (con bool True))])]
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])]])
--- optimized Core
let anf#4 : bool = trace "tag" in true in
let anf#5 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#1 : Data = constrData anf#4 anf#5 in
let effect#2 : int = trace "between" in 0 in
trace "selected" in 9
--- optimized UPLC
(program 1.1.0
  [(lam builtin_9
    [(lam anf_3
      [(lam anf_6
        [(lam data_7
          [(lam effect_8
            (force [[builtin_9 (con string "selected")] (delay (con integer 9))]))
            (force [[builtin_9 (con string "between")] (delay (con integer 0))])])
          [[(builtin constrData) anf_3] anf_6]])
        (force [[builtin_9 (con string "fields")] (delay (con (list data) [(I 42)]))])])
      (force [[builtin_9 (con string "tag")] (delay (con bool True))])])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#34 : bool = trace "tag" in true in
let anf#35 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#31 : Data = constrData anf#34 anf#35 in
let effect#32 : int = trace "between" in 0 in
case@Data data#31 of
  DataConstr pair#33 -> trace "selected" in 9
--- isolated folded Core
let anf#34 : bool = trace "tag" in true in
let anf#35 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#31 : Data = constrData anf#34 anf#35 in
let effect#32 : int = trace "between" in 0 in
trace "selected" in 9
--- isolated cleaned Core
let anf#34 : bool = trace "tag" in true in
let anf#35 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#31 : Data = constrData anf#34 anf#35 in
let effect#32 : int = trace "between" in 0 in
trace "selected" in 9
--- isolated UPLC before
(program 1.1.0
  [(lam anf_34
    [(lam anf_35
      [(lam data_31
        [(lam effect_32
          [(lam generated_36
            (force
              [[[[[[(force (builtin chooseData)) generated_36]
                (delay
                  (force
                    [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))]
                (delay (error))]
                (delay (error))]
                (delay (error))]
                (delay (error))]))
            data_31])
          (force
            [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
        [[(builtin constrData) anf_34] anf_35]])
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])])
    (force [[(force (builtin trace)) (con string "tag")] (delay (con bool True))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_34
    [(lam anf_35
      [(lam data_31
        [(lam effect_32
          (force
            [[(force (builtin trace)) (con string "selected")] (delay (con integer 9))]))
          (force
            [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
        [[(builtin constrData) anf_34] anf_35]])
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])])
    (force [[(force (builtin trace)) (con string "tag")] (delay (con bool True))])])
--- result
error: Runtime(TypeMismatch(Integer, Boolean(true)))
--- logs
["tag", "fields"]
