crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__data__wrappers__constr_wrong_tag_used_true.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
let data#36 : Data = constrData (trace "tag" in true) (trace "fields" in (con (list data) [(I 42)])) in
let effect#37 : int = trace "between" in 0 in
case@Data data#36 of
  DataConstr pair#38 -> trace "selected" in fstPair pair#38
--- unoptimized UPLC
(program 1.1.0
  [(lam data_36
    [(lam effect_37
      [(lam generated_39
        (force
          [[[[[[(force (builtin chooseData)) generated_39]
            (delay
              [(lam pair_38
                (force
                  [[(force (builtin trace)) (con string "selected")]
                    (delay [(force (force (builtin fstPair))) pair_38])]))
                [(builtin unConstrData) generated_39]])]
            (delay (error))]
            (delay (error))]
            (delay (error))]
            (delay (error))]))
        data_36])
      (force
        [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
    [[(builtin constrData)
      (force [[(force (builtin trace)) (con string "tag")] (delay (con bool True))])]
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])]])
--- optimized Core
let anf#4 : bool = trace "tag" in true in
let anf#5 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#1 : Data = constrData anf#4 anf#5 in
let effect#2 : int = trace "between" in 0 in
case@Data data#1 of
  DataConstr pair#3 -> trace "selected" in fstPair pair#3
--- optimized UPLC
(program 1.1.0
  [(lam builtin_12
    [(lam builtin_13
      [(lam builtin_14
        [(lam anf_6
          [(lam anf_7
            [(lam data_8
              [(lam effect_9
                [(lam generated_11
                  (force
                    [[[[[[builtin_14 generated_11]
                      (delay
                        [(lam pair_10
                          (force [[builtin_13 (con string "selected")] (delay [builtin_12 pair_10])]))
                          [(builtin unConstrData) generated_11]])]
                      (delay (error))]
                      (delay (error))]
                      (delay (error))]
                      (delay (error))]))
                  data_8])
                (force [[builtin_13 (con string "between")] (delay (con integer 0))])])
              [[(builtin constrData) anf_6] anf_7]])
            (force [[builtin_13 (con string "fields")] (delay (con (list data) [(I 42)]))])])
          (force [[builtin_13 (con string "tag")] (delay (con bool True))])])
        (force (builtin chooseData))])
      (force (builtin trace))])
    (force (force (builtin fstPair)))])
--- isolated pass
--- isolated ANF input
let anf#39 : bool = trace "tag" in true in
let anf#40 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#36 : Data = constrData anf#39 anf#40 in
let effect#37 : int = trace "between" in 0 in
case@Data data#36 of
  DataConstr pair#38 -> trace "selected" in fstPair pair#38
--- isolated folded Core
let anf#39 : bool = trace "tag" in true in
let anf#40 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#36 : Data = constrData anf#39 anf#40 in
let effect#37 : int = trace "between" in 0 in
let pair#38 : pair int (list Data) = unConstrData data#36 in
trace "selected" in fstPair pair#38
--- isolated cleaned Core
let anf#39 : bool = trace "tag" in true in
let anf#40 : list Data = trace "fields" in (con (list data) [(I 42)]) in
let data#36 : Data = constrData anf#39 anf#40 in
let effect#37 : int = trace "between" in 0 in
let pair#38 : pair int (list Data) = unConstrData data#36 in
trace "selected" in fstPair pair#38
--- isolated UPLC before
(program 1.1.0
  [(lam anf_39
    [(lam anf_40
      [(lam data_36
        [(lam effect_37
          [(lam generated_41
            (force
              [[[[[[(force (builtin chooseData)) generated_41]
                (delay
                  [(lam pair_38
                    (force
                      [[(force (builtin trace)) (con string "selected")]
                        (delay [(force (force (builtin fstPair))) pair_38])]))
                    [(builtin unConstrData) generated_41]])]
                (delay (error))]
                (delay (error))]
                (delay (error))]
                (delay (error))]))
            data_36])
          (force
            [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
        [[(builtin constrData) anf_39] anf_40]])
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])])
    (force [[(force (builtin trace)) (con string "tag")] (delay (con bool True))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_39
    [(lam anf_40
      [(lam data_36
        [(lam effect_37
          [(lam pair_38
            (force
              [[(force (builtin trace)) (con string "selected")]
                (delay [(force (force (builtin fstPair))) pair_38])]))
            [(builtin unConstrData) data_36]])
          (force
            [[(force (builtin trace)) (con string "between")] (delay (con integer 0))])])
        [[(builtin constrData) anf_39] anf_40]])
      (force
        [[(force (builtin trace)) (con string "fields")]
          (delay (con (list data) [(I 42)]))])])
    (force [[(force (builtin trace)) (con string "tag")] (delay (con bool True))])])
--- result
error: Runtime(TypeMismatch(Integer, Boolean(true)))
--- logs
["tag", "fields"]
